added font family

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./resources/css/css-reset.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Vidaloka&display=swap" rel="stylesheet" />
     <title>Document</title>
   </head>
   <header>
@@ -13,8 +14,8 @@
       <div class="main-header">
         <div class="header-info wrapper">
           <div class="logo">
-            <p class="name"><span class="light-shade-color">Scott's Flowers</span></p>
-            <p class="slogan"><span class="light-shade-color">Floral Studio</span></p>
+            <p class="name"><span class="light-shade-color serif">Scott's Flowers</span></p>
+            <p class="slogan"><span class="light-shade-color sans">Floral Studio</span></p>
           </div>
           <button>
             <svg viewBox="0 0 100 70" width="40" height="40">
@@ -25,8 +26,8 @@
           </button>
           <div class="menu">
             <div class="logo">
-              <p>Scott's Flowers</p>
-              <p>Floral Studio</p>
+              <span class="light-shade-color serif">Scott's Flowers</span>
+              <span class="light-shade-color sans">Floral Studio</span>
             </div>
             <nav>
               <ul>
@@ -66,8 +67,8 @@
           </div>
         </div>
         <div class="banner wrapper">
-          <span class="light-shade-color title">Beautiful Flowers for Any Occasion</span>
-          <span class="light-shade-color info">Most elegant, freshly cut floral arrangements</span>
+          <span class="light-shade-color title serif">Beautiful Flowers for Any Occasion</span>
+          <span class="light-shade-color info sans">Most elegant, freshly cut floral arrangements</span>
         </div>
       </div>
     </div>
