services cards made - No background img yet.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
   </head>
   <header>
-    <div class="icons">
+    <div class="icons wrapper">
       <a href="#">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
           <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
@@ -194,9 +194,27 @@
               >
             </p>
           </div>
-          <div class="cards">
-            <div class="card">
-              <p><span class="light-shade-color serif">Decoration</span></p>
+          <div class="service-cards">
+            <div class="service-card">
+              <p><span class="light-shade-color serif title">Decoration</span></p>
+              <p>
+                <span class="light-shade-color sans"
+                  >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
+                  you want to demonstrate your style and taste to your guests, clients or visitors.
+                </span>
+              </p>
+            </div>
+            <div class="service-card">
+              <p><span class="light-shade-color serif title">Decoration</span></p>
+              <p>
+                <span class="light-shade-color sans"
+                  >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
+                  you want to demonstrate your style and taste to your guests, clients or visitors.
+                </span>
+              </p>
+            </div>
+            <div class="service-card">
+              <p><span class="light-shade-color serif title">Decoration</span></p>
               <p>
                 <span class="light-shade-color sans"
                   >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
