service section + cards complete

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
         </svg>
       </a>
     </div>
-
     <div class="header">
       <div class="main-header">
         <div class="header-info wrapper">
@@ -195,32 +194,39 @@
             </p>
           </div>
           <div class="service-cards">
-            <div class="service-card">
-              <p><span class="light-shade-color serif title">Decoration</span></p>
-              <p>
-                <span class="light-shade-color sans"
-                  >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
-                  you want to demonstrate your style and taste to your guests, clients or visitors.
-                </span>
-              </p>
+            <div class="service-card-1">
+              <div class="card-info">
+                <p><span class="light-shade-color serif title">Decoration</span></p>
+                <p>
+                  <span class="light-shade-color sans"
+                    >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
+                    you want to demonstrate your style and taste to your guests, clients or visitors.
+                  </span>
+                </p>
+              </div>
             </div>
-            <div class="service-card">
-              <p><span class="light-shade-color serif title">Decoration</span></p>
-              <p>
-                <span class="light-shade-color sans"
-                  >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
-                  you want to demonstrate your style and taste to your guests, clients or visitors.
-                </span>
-              </p>
+            <div class="service-card-2">
+              <div class="card-info">
+                <p><span class="light-shade-color serif title">Floral Design</span></p>
+                <p>
+                  <span class="light-shade-color sans"
+                    >Our design team is always here to arrange unique and beautiful bouquets and flower compositions.
+                    Hurry up to surprise your loved ones and add some personal touch to your gifts.
+                  </span>
+                </p>
+              </div>
             </div>
-            <div class="service-card">
-              <p><span class="light-shade-color serif title">Decoration</span></p>
-              <p>
-                <span class="light-shade-color sans"
-                  >We create elegant flower decorations for homes, offices, shops, and other locations. Contact us if
-                  you want to demonstrate your style and taste to your guests, clients or visitors.
-                </span>
-              </p>
+            <div class="service-card-3">
+              <div class="card-info">
+                <p><span class="light-shade-color serif title">Events</span></p>
+                <p>
+                  <span class="light-shade-color sans"
+                    >We know that details matter. That's why we provide and arrange flowers for private and corporate
+                    celebrations, charity galas, product launches, and other important events. Come to us to make your
+                    event an all-time memory.
+                  </span>
+                </p>
+              </div>
             </div>
           </div>
         </div>
