--- a/index.html
+++ b/index.html
@@ -277,6 +277,57 @@
         </div>
       </div>
     </section>
+    <section class="portfolio">
+      <div class="wrapper">
+        <div class="sect-info">
+          <div class="sm-flower">
+            <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
+          </div>
+          <div class="title-head">
+            <p><span class="dark-title">Portfolio</span></p>
+          </div>
+          <div class="slideshow-container">
+            <!-- Full-width images with number and caption text -->
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-1.jpg" style="width: 100%" />
+            </div>
+
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-2.jpg" style="width: 100%" />
+            </div>
+
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-4.jpg" style="width: 100%" />
+            </div>
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-6.jpg" style="width: 100%" />
+            </div>
+
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-5.jpg" style="width: 100%" />
+            </div>
+
+            <div class="mySlides fade">
+              <img src="./resources/img/slide-photo-8.jpg" style="width: 100%" />
+            </div>
+
+            <!-- Next and previous buttons -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+          <br />
+          <!-- The dots/circles -->
+          <div style="text-align: center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   <footer></footer>
