updated Portfolio pics

--- a/index.html
+++ b/index.html
@@ -299,16 +299,17 @@
             <div class="mySlides fade">
               <img src="./resources/img/slide-photo-4.jpg" style="width: 100%" />
             </div>
+
             <div class="mySlides fade">
               <img src="./resources/img/slide-photo-6.jpg" style="width: 100%" />
             </div>
 
             <div class="mySlides fade">
-              <img src="./resources/img/slide-photo-5.jpg" style="width: 100%" />
+              <img src="./resources/img/slide.jpg" style="width: 100%" />
             </div>
 
             <div class="mySlides fade">
-              <img src="./resources/img/slide-photo-8.jpg" style="width: 100%" />
+              <img src="./resources/img/slide-photo-9.jpg" style="width: 100%" />
             </div>
 
             <!-- Next and previous buttons -->
