flower ordering section complete for destkop - not finished for mobile

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         </div>
       </div>
     </section>
+
     <section class="services">
       <div class="wrapper">
         <div class="sect-info">
@@ -232,6 +233,7 @@
         </div>
       </div>
     </section>
+
     <section class="events">
       <div class="wrapper">
         <div class="sect-info">
@@ -277,6 +279,7 @@
         </div>
       </div>
     </section>
+
     <section class="portfolio">
       <div class="wrapper">
         <div class="sect-info">
@@ -287,7 +290,6 @@
             <p><span class="dark-title">Portfolio</span></p>
           </div>
           <div class="slideshow-container">
-            <!-- Full-width images with number and caption text -->
             <div class="mySlides fade">
               <img src="./resources/img/slide-photo-1.jpg" style="width: 100%" />
             </div>
@@ -312,12 +314,10 @@
               <img src="./resources/img/slide-photo-9.jpg" style="width: 100%" />
             </div>
 
-            <!-- Next and previous buttons -->
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
           </div>
           <br />
-          <!-- The dots/circles -->
           <div style="text-align: center">
             <span class="dot" onclick="currentSlide(1)"></span>
             <span class="dot" onclick="currentSlide(2)"></span>
@@ -346,6 +346,73 @@
         </div>
       </section>
     </div>
+
+    <section class="flowers">
+      <div class="wrapper">
+        <div class="sect-info">
+          <div class="sm-flower">
+            <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
+          </div>
+          <div class="title-head">
+            <p><span class="dark-title">Flowers</span></p>
+          </div>
+
+          <div class="flower-cards">
+            <div class="flower-card">
+              <img src="./resources/img/unused.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Dusty Pinks</span></p>
+                <p>
+                  <span class="dark-para sans">from $180</span>
+                </p>
+              </div>
+              <div class="order-btn">
+                <a href="#"><span class="light-para">Order Now</span></a>
+              </div>
+            </div>
+
+            <div class="flower-card">
+              <img src="./resources/img/slide.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Dusty Whites</span></p>
+                <p>
+                  <span class="dark-para sans">from $180 </span>
+                </p>
+              </div>
+              <div class="order-btn">
+                <a href="#"><span class="light-para">Order Now</span></a>
+              </div>
+            </div>
+
+            <div class="flower-card">
+              <img src="./resources/img/unused.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Lavender Shades</span></p>
+                <p>
+                  <span class="dark-para sans">from $170 </span>
+                </p>
+              </div>
+              <div class="order-btn">
+                <a href="#"><span class="light-para">Order Now</span></a>
+              </div>
+            </div>
+
+            <div class="flower-card">
+              <img src="./resources/img/events-funeral.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Parfait</span></p>
+                <p>
+                  <span class="dark-para sans">from $200</span>
+                </p>
+              </div>
+              <div class="order-btn">
+                <a href="#"><span class="light-para">Order Now</span></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   <footer></footer>
