Special section setup done. Still need to add photos.

--- a/index.html
+++ b/index.html
@@ -413,6 +413,75 @@
         </div>
       </div>
     </section>
+
+    <section class="special">
+      <div class="wrapper">
+        <div class="sect-info">
+          <div class="sm-flower">
+            <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
+          </div>
+          <div class="title-head">
+            <p><span class="dark-title">Flowers</span></p>
+          </div>
+
+          <div class="flower-cards">
+            <div class="flower-card">
+              <img src="./resources/img/flowers-pink-3.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Mother's Day Collection</span></p>
+                <p>
+                  <span class="dark-para sans"
+                    >One of the best and the most elegant ways to show your mother how much you love her is to present
+                    her a beautiful flower composition. Choose the colors along with the flowers and place your order to
+                    make this year's Mother's Day unforgettable.</span
+                  >
+                </p>
+
+                <div class="order-btn">
+                  <a href="#"><span class="light-para">Order Now</span></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="flower-card">
+              <img src="./resources/img/flowers-white-1.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Valentine's Day Collection</span></p>
+                <p>
+                  <span class="dark-para sans"
+                    >Roses are red, violets are blue, our flower collections are here for you! If you're looking for a
+                    unique gift to your loved one, check out this fantastic collection. It'll help you make Valentine's
+                    Day really special!</span
+                  >
+                </p>
+
+                <div class="order-btn">
+                  <a href="#"><span class="light-para">Order Now</span></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="flower-card">
+              <img src="./resources/img/flowers-lavender-1.jpg" />
+              <div class="card-info">
+                <p><span class="dark-title serif title">Christmas Collection</span></p>
+                <p>
+                  <span class="dark-para sans"
+                    >Christmas is a busy season, but we've got your back. Order bouquets from this beautiful special
+                    collection and focus on picking the presents to match them, while we'll arrange the flowers for
+                    you.</span
+                  >
+                </p>
+
+                <div class="order-btn">
+                  <a href="#"><span class="light-para">Order Now</span></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   <footer></footer>
