Special section complete -photos updated

--- a/index.html
+++ b/index.html
@@ -421,12 +421,21 @@
             <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
           </div>
           <div class="title-head">
-            <p><span class="dark-title">Flowers</span></p>
+            <p><span class="dark-title">Special Flower Collections</span></p>
+          </div>
+          <div class="para">
+            <p>
+              <span class="dark-para"
+                >Need to pick a gift for a specific event? We can help you even if you are short of time. Our special
+                flower collections are always available for those, who enjoy stylish ready-made designs and fast yet
+                beautiful solutions.</span
+              >
+            </p>
           </div>
 
           <div class="flower-cards">
             <div class="flower-card">
-              <img src="./resources/img/flowers-pink-3.jpg" />
+              <img src="./resources/img/mothers-day2.jpg" />
               <div class="card-info">
                 <p><span class="dark-title serif title">Mother's Day Collection</span></p>
                 <p>
@@ -444,7 +453,7 @@
             </div>
 
             <div class="flower-card">
-              <img src="./resources/img/flowers-white-1.jpg" />
+              <img src="./resources/img/valentines-day2.jpg" />
               <div class="card-info">
                 <p><span class="dark-title serif title">Valentine's Day Collection</span></p>
                 <p>
@@ -462,7 +471,7 @@
             </div>
 
             <div class="flower-card">
-              <img src="./resources/img/flowers-lavender-1.jpg" />
+              <img src="./resources/img/Christmas_Bouquet2.jpg" />
               <div class="card-info">
                 <p><span class="dark-title serif title">Christmas Collection</span></p>
                 <p>
