--- a/index.html
+++ b/index.html
@@ -491,6 +491,38 @@
         </div>
       </div>
     </section>
+
+    <section class="additional">
+      <div class="wrapper">
+        <div class="sect-info">
+          <div class="sm-flower">
+            <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
+          </div>
+          <div class="title-head">
+            <p><span class="dark-title">Additional Services</span></p>
+          </div>
+
+          <div class="event-cards">
+            <div class="card-info">
+              <p>
+                <a href="#"><span class="light-shade-color serif title">Wedding Flowers</span></a>
+              </p>
+            </div>
+
+            <div class="card-info">
+              <p>
+                <a href="#"><span class="light-shade-color serif title">Prom Flowers</span></a>
+              </p>
+            </div>
+            <div class="card-info">
+              <p>
+                <a href="#"><span class="light-shade-color serif title">Flower Crowns</span></a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 
   <footer></footer>
