Testimonials section desktop complete. Still need to work on mobile

--- a/index.html
+++ b/index.html
@@ -557,6 +557,54 @@
       </section>
     </div>
 
+    <section class="testimonials">
+      <div class="wrapper">
+        <div class="sect-info">
+          <div class="sm-flower">
+            <img src="./resources/svgs/regular/Flower-Petals-Silhouette.svg" class="svg" alt="flower" />
+          </div>
+          <div class="title-head">
+            <p><span class="dark-title">Testimonials</span></p>
+          </div>
+          <div class="cards">
+            <div class="card">
+              <p><span class="dark-title">Katarina</span></p>
+              <p>
+                <span class="dark-para"
+                  >"I'm an event planner, and I always turn to Scott's Flowers when I need to add that extra touch to a
+                  wedding, a party, or a conference. They haven't failed me even once, and they always pick the perfect
+                  flowers for the occasion!"</span
+                >
+              </p>
+              <p><span class="dark-para date">March 10, 2018</span></p>
+            </div>
+
+            <div class="card">
+              <p><span class="dark-title">Karin</span></p>
+              <p>
+                <span class="dark-para"
+                  >"The flower arrangements from Scott's Flowers are always chic, classy, and fresh. I enjoy the
+                  designs, and I enjoy the service too."</span
+                >
+              </p>
+              <p><span class="dark-para date">March 15, 2018</span></p>
+            </div>
+
+            <div class="card">
+              <p><span class="dark-title">Lisa & Matt</span></p>
+              <p>
+                <span class="dark-para"
+                  >"Amazing experience with Scott's Flowers! They've helped to turn our wedding into a fairytale! Lisa
+                  likes how they listened to her vision, and I belive they've actually exceeded our expectaions."</span
+                >
+              </p>
+              <p><span class="dark-para date">Sept 24, 2020</span></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="contact-background">
       <section class="contact">
         <div class="wrapper">
