Testimonial section complete

--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
             <nav>
               <ul>
                 <li>
-                  <a href="#"><span class="light-shade-color sans">About us</span></a>
+                  <a href="#about-us"><span class="light-shade-color sans">About us</span></a>
                 </li>
                 |
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Services</span></a>
+                  <a href="#services"><span class="light-shade-color sans">Services</span></a>
                 </li>
                 |
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Portfolio</span></a>
+                  <a href="#portfolio"><span class="light-shade-color sans">Portfolio</span></a>
                 </li>
                 |
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Flowers</span></a>
+                  <a href="#flowers"><span class="light-shade-color sans">Flowers</span></a>
                 </li>
                 |
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Testimonials</span></a>
+                  <a href="#test"><span class="light-shade-color sans">Testimonials</span></a>
                 </li>
                 |
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Contacts</span></a>
+                  <a href="#contacts"><span class="light-shade-color sans">Contacts</span></a>
                 </li>
               </ul>
             </nav>
@@ -93,27 +93,27 @@
             <nav class="nav-mobile">
               <ul>
                 <li>
-                  <a href="#"><span class="light-shade-color sans">About us</span></a>
+                  <a href="#aout-us"><span class="light-shade-color sans">About us</span></a>
                 </li>
 
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Services</span></a>
+                  <a href="#services"><span class="light-shade-color sans">Services</span></a>
                 </li>
 
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Portfolio</span></a>
+                  <a href="#portfolio"><span class="light-shade-color sans">Portfolio</span></a>
                 </li>
 
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Flowers</span></a>
+                  <a href="#flowers"><span class="light-shade-color sans">Flowers</span></a>
                 </li>
 
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Testimonials</span></a>
+                  <a href="#test"><span class="light-shade-color sans">Testimonials</span></a>
                 </li>
 
                 <li>
-                  <a href="#"><span class="light-shade-color sans">Contacts</span></a>
+                  <a href="#contacts"><span class="light-shade-color sans">Contacts</span></a>
                 </li>
               </ul>
             </nav>
@@ -150,7 +150,7 @@
     </div>
   </header>
   <body>
-    <section class="about-us">
+    <section class="about-us" id="about-us">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -173,7 +173,7 @@
       </div>
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -229,7 +229,7 @@
       </div>
     </section>
 
-    <section class="events">
+    <section class="events" id="events">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -287,7 +287,7 @@
       </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -354,7 +354,7 @@
       </section>
     </div>
 
-    <section class="flowers">
+    <section class="flowers" id="flowers">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -421,7 +421,7 @@
       </div>
     </section>
 
-    <section class="special">
+    <section class="special" id="collection">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -557,7 +557,7 @@
       </section>
     </div>
 
-    <section class="testimonials">
+    <section class="testimonials" id="test">
       <div class="wrapper">
         <div class="sect-info">
           <div class="sm-flower">
@@ -605,7 +605,7 @@
       </div>
     </section>
 
-    <div class="contact-background">
+    <div class="contact-background" id="contacts">
       <section class="contact">
         <div class="wrapper">
           <div class="sect-info">
@@ -676,36 +676,36 @@
         <div class="card">
           <div class="sect-info">
             <p>
-              <a href="#"><span class="dark-para">About us</span></a>
+              <a href="#about-us"><span class="dark-para">About us</span></a>
             </p>
             <p>
-              <a href="#"><span class="dark-para">Services</span></a>
+              <a href="#services"><span class="dark-para">Services</span></a>
             </p>
             <p>
-              <a href="#"><span class="dark-para">Events</span></a>
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <div class="sect-info">
-            <p>
-              <a href="#"><span class="dark-para">Portfolio</span></a>
-            </p>
-            <p>
-              <a href="#"><span class="dark-para">Flowers</span></a>
-            </p>
-            <p>
-              <a href="#"><span class="dark-para">Collections</span></a>
+              <a href="#events"><span class="dark-para">Events</span></a>
             </p>
           </div>
         </div>
         <div class="card">
           <div class="sect-info">
             <p>
-              <a href="#"><span class="dark-para">Testimonials</span></a>
+              <a href="#portfolio"><span class="dark-para">Portfolio</span></a>
             </p>
             <p>
-              <a href="#"><span class="dark-para">Contacts</span></a>
+              <a href="#flowers"><span class="dark-para">Flowers</span></a>
+            </p>
+            <p>
+              <a href="#collection"><span class="dark-para">Collections</span></a>
+            </p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="sect-info">
+            <p>
+              <a href="#test"><span class="dark-para">Testimonials</span></a>
+            </p>
+            <p>
+              <a href="#contacts"><span class="dark-para">Contacts</span></a>
             </p>
           </div>
         </div>
