Added Menu Close Function

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </nav>
           </div>
 
-          <p class="menu-button">
+          <p class="menu-button" id="menu-btn">
             <svg viewBox="0 0 100 70" width="40" height="40">
               <rect width="100" height="15" rx="12"></rect>
               <rect y="30" width="100" height="15" rx="12"></rect>
@@ -82,7 +82,7 @@
                 <p class="name"><span class="light-shade-color serif">Scott's Flowers</span></p>
                 <p class="slogan"><span class="light-shade-color sans">Floral Studio</span></p>
               </div>
-              <p class="menu-button">
+              <p class="menu-button" id="mm-button">
                 <svg viewBox="0 0 100 70" width="40" height="40">
                   <rect width="100" height="15" rx="12"></rect>
                   <rect y="30" width="100" height="15" rx="12"></rect>
