--- a/index.html
+++ b/index.html
@@ -750,5 +750,5 @@
       </div>
     </div>
   </footer>
-  <script src="./js/index.js"></script>
+  <script src="./js/index.js" type="text/javascript"></script>
 </html>
