--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./resources/css/css-reset.css" />
     <link rel="stylesheet" href="./resources/css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Vidaloka&display=swap" rel="stylesheet" />
-    <script type="text/javascript" src="./js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
 
     <title>Document</title>
   </head>
