--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
           <p class="menu-button" id="menu-btn">
             <svg viewBox="0 0 100 70" width="40" height="40">
-              <rect width="100" height="15" rx="12"></rect>
-              <rect y="30" width="100" height="15" rx="12"></rect>
-              <rect y="60" width="100" height="15" rx="12"></rect>
+              <rect width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
+              <rect y="30" width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
+              <rect y="60" width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
             </svg>
           </p>
           <div class="menu main-header" id="menu">
@@ -87,9 +87,9 @@
               </div>
               <p class="menu-button" id="mm-button">
                 <svg viewBox="0 0 100 70" width="40" height="40">
-                  <rect width="100" height="15" rx="12"></rect>
-                  <rect y="30" width="100" height="15" rx="12"></rect>
-                  <rect y="60" width="100" height="15" rx="12"></rect>
+                  <rect width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
+                  <rect y="30" width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
+                  <rect y="60" width="100" height="12" rx="12" style="fill: rgba(255, 255, 255, 0.774)"></rect>
                 </svg>
               </p>
             </div>
