doc name change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Vidaloka&display=swap" rel="stylesheet" />
     <script type="module" src="./js/index.js"></script>
 
-    <title>Document</title>
+    <title>Floral Studio</title>
   </head>
   <header>
     <div class="icons wrapper">
