--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <nav class="nav-mobile">
               <ul>
                 <li>
-                  <a href="#aout-us"><span class="light-shade-color sans">About us</span></a>
+                  <a href="#about-us"><span class="light-shade-color sans">About us</span></a>
                 </li>
 
                 <li>
