Updating build system to parcel

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./resources/css/css-reset.css" />
-    <link rel="stylesheet" href="./resources/css/main.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Vidaloka&display=swap" rel="stylesheet" />
-    <script type="module" src="./js/index.js"></script>
 
     <title>Floral Studio</title>
   </head>
@@ -551,6 +548,7 @@
           </div>
           <div class="form">
             <form action="/index.html" method="POST">
+              <label class="visually-hidden" for="email">Email</label>
               <input type="email" id="email" name="email" required placeholder="Email" />
               <br />
               <input type="submit" class="submit" value="Subscribe" />
@@ -744,7 +742,7 @@
 
       <div class="license">
         <div class="cpyrt">
-          <p><span class="dark-para">&copy Created by </span></p>
+          <p><span class="dark-para">&copy; Created by </span></p>
         </div>
         <div class="rights">
           <p><span class="dark-para sans">All rights Reserved</span></p>
@@ -752,4 +750,5 @@
       </div>
     </div>
   </footer>
+  <script src="./js/index.js"></script>
 </html>
